tests/testfiles/passing/invalid_identifiers/keyword_as_id_continue.c
/* Keyword as identifier: continue */
int main() {
    int continue;
}